[package]
name = "projectorctl"
version = "1.0.0"
authors = ["Pavel Krasnov <krasnovpavel0@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
byteorder = "1.4.3"
serialport = "3.3.0"
structopt = "*"
