[package]
name = "projectorctl"
version = "1.0.0"
authors = ["Pavel Krasnov <krasnovpavel0@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_okapi = "0.8.0-rc.1"
okapi = "0.7.0-rc.1"
serde = "1.0.135"
serde_json = "1.0.78"
schemars = "0.8.8"
byteorder = "1.4.3"
serialport = "3.3.0"
structopt = "*"
log = "0.4"

